Use php fpm pool

--- a/templates/steamengine_wrapper.sh.j2
+++ b/templates/steamengine_wrapper.sh.j2
@@ -37,7 +37,14 @@ while [ $# -gt 0 ]; do
   case $arg in
   {% for item in steamengine_wrapper_scripts -%}
   {{ item.name }})
-    {{ item.command | indent(4) }}
+    {% set command = item.command %}
+    {% if item.run_as_app_user is defined and item.run_as_app_user %}
+      {% set command = 'sudo -u ' ~ steamengine_app_user ~ ' ' ~ command %}
+    {% endif %}
+    {% if item.run_in_project_root_path_web is defined and item.run_in_project_root_path_web %}
+      {% set command = 'bash -c \'cd ' ~ steamengine_project_root_path_web ~ '; ' ~ command ~ '\'' %}
+    {% endif %}
+    {{ command | indent(4) }}
     exit $?
     ;;
   {% endfor -%}
