feat: enable an optional additional group for users

--- a/templates/systemd_tomcat.service.j2
+++ b/templates/systemd_tomcat.service.j2
@@ -22,7 +22,7 @@ LimitNPROC=infinity
 LimitCORE=infinity
 
 User={{ steamengine_app_user }}
-Group={{ steamengine_app_user }}
+Group={{ steamengine_project_user }}
 LogExtraFields=STM_ID=steamengine
 LogExtraFields=PROJECT_TYPE={{ steamengine_project_type }}
 SyslogIdentifier={{ steamengine_project_name }}
